k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jump-the-queue-frontend-deployment
  labels:
    app: jump-the-queue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jump-the-queue
  template:
    metadata:
      labels:
        app: jump-the-queue
    spec:
      containers:
        - name: jump-the-queue-frontend-container
          image: jump-the-queue-frontend:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4200
