k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jump-the-queue-service
  labels:
    app: jump-the-queue
spec:
  selector:
    app: jump-the-queue
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 4200
