k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: frontend-ingress
  labels:
    name: frontend
spec:
  tls:
    - hosts:
        - web-app.com
  rules:
    - host: web-app.com
      http:
        paths:
          - pathType: Prefix
            path: /*
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
