k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jump-the-queue-ingress
  labels:
    name: jump-the-queue
spec:
  rules:
    - host: web-app.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jump-the-queue-service
                port:
                  number: 9090
